// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots renders correctly 1`] = `
<button
  className="btn btn-primary"
>
  Click me!
</button>
`;

exports[`Button snapshots renders correctly 2`] = `
<button
  className="btn btn-secondary"
>
  Click me!
</button>
`;

exports[`Button snapshots renders correctly 3`] = `
<button
  className="btn btn-success"
>
  Click me!
</button>
`;

exports[`Button snapshots renders correctly 4`] = `
<button
  className="btn btn-transparent"
>
  Click me!
</button>
`;

exports[`Button snapshots renders correctly 5`] = `
<button
  className="btn btn-warning"
>
  Click me!
</button>
`;

exports[`Button snapshots renders correctly 6`] = `
<button
  className="btn btn-danger"
>
  Click me!
</button>
`;

exports[`Button snapshots renders correctly 7`] = `
<button
  className="btn btn-link"
>
  Click me!
</button>
`;
